# the_project

./: .gitignore  Just_because_you_can.patch  Pipfile  big_project_main.py  can_test_case_import.py  conftest.py  module0.py  pylintrc  pyproject.toml  pytest.ini  run_all_the_tests_on_cli.py  run_just_because_you_can.py  run_the_project_main.py  run_the_project_main_reusable_func.py  test_all_the_tests_on_cli.py  test_big_project_main.py  test_file_utils.py  test_module0.py  test_package.py  test_the_project_main.py  test_the_project_main_reusable_func.py  test_utils.py  the_project_main.py  utils.py
docs/: Just_because_you_can.patch  PytestAndSycPath.md  SrcDirectoryAndSysPath.md  SysDirectoryAndSysPath_2.md  TheModule.md  ThePackage.md  TheProject.md
src/: run_the_project_main.py
src/common/: __init__.py  file_utils.py  utils.py
src/the_plugins_namespace/: example_plugin.py  plugin_api.py
src/the_project/: __init__.py  module0.py  utils.py
src/the_project/the_plugins_namespace/: the_project_plugin.py
tests/: conftest.py  run_all_the_tests_on_cli.py  test_can_test_case_import.py  test_file_utils.py  test_module0.py  test_package.py  test_the_project_main_reusable_func.py  test_utils.py
the_project/: module0.py
